<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View
        android:id="@+id/v_scrn_top"
        android:layout_width="match_parent"
        android:layout_height="10px"
        android:layout_alignParentTop="true"
        android:background="@android:color/black"
        android:focusable="true" />

    <RelativeLayout
        android:id="@+id/top_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v_scrn_top"
        android:background="@android:color/black" >

        <!-- <ImageButton -->
        <!-- android:id="@+id/btn_left" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_alignParentLeft="true" -->
        <!-- android:layout_centerVertical="true" -->
        <!-- android:background="@android:color/black" -->
        <!-- android:src="@drawable/url_left" /> -->

        <ImageButton
            android:id="@+id/btn_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@android:color/black"
            android:focusable="true"
            android:src="@drawable/next" />

        <TextView
            android:id="@+id/ballot_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/v_scrn_btm"
        android:background="@android:color/background_dark" >

        <!-- <ImageButton -->
        <!-- android:id="@+id/btn_goto_start" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_weight="1" -->
        <!-- android:background="@android:color/background_dark" -->
        <!-- android:src="@drawable/rewind" /> -->

        <ImageButton
            android:id="@+id/btn_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/background_dark"
            android:focusable="true"
            android:src="@drawable/help" />

        <ImageButton
            android:id="@+id/btn_volume_decrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/background_dark"
            android:focusable="true"
            android:src="@drawable/vol_dec" />

        <ImageButton
            android:id="@+id/btn_volume_increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/background_dark"
            android:focusable="true"
            android:src="@drawable/vol_inc" />

        <ImageButton
            android:id="@+id/btn_font_decrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/background_dark"
            android:focusable="true"
            android:src="@drawable/a_small" />

        <ImageButton
            android:id="@+id/btn_font_increase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/background_dark"
            android:focusable="true"
            android:src="@drawable/a_big" />

        <ImageButton
            android:id="@+id/btn_goto_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/background_dark"
            android:focusable="true"
            android:src="@drawable/end" />
    </LinearLayout>

    <View
        android:id="@+id/v_scrn_btm"
        android:layout_width="match_parent"
        android:layout_height="10px"
        android:layout_alignParentBottom="true"
        android:background="@android:color/black"
        android:focusable="true" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="@string/help_message"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btn_qrcode_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:text="@string/setting_qrCode" />

    <Button
        android:id="@+id/btn_nfctag_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_qrcode_setting"
        android:layout_centerHorizontal="true"
        android:text="@string/setting_nfctag" />

    <Button
        android:id="@+id/btn_paper_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_nfctag_setting"
        android:layout_centerHorizontal="true"
        android:text="@string/setting_paper" />

    <Button
        android:id="@+id/btn_manual_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_paper_setting"
        android:layout_centerHorizontal="true"
        android:text="@string/setting_manually" />

</RelativeLayout>